<resources>
    <string name="app_name" translatable="false">Bacherlorproef</string>
    <string name="shared_element_transition" translatable="false">shared_element_transition</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_showcase">Showcase</string>
    <string name="choice_async">Async Work</string>
    <string name="choice_navigation">Navigation</string>
    <string name="choice_lists">Lists</string>
    <string name="choice_pagers">Pagers</string>
    <string name="choice_animation">Animation</string>
    <string name="choice_permissions">Permissions</string>
    <string name="choice_forms">Forms</string>
    <string name="back_to_showcase">Back to Showcase</string>
    <string name="form_text_hint">This is an example text hint</string>
    <string name="form_text_required">Please provide a value</string>
    <string name="form_text_max_value">A text value cannot exceed %1d characters</string>
    <string name="form_switch_on">Switch On</string>
    <string name="form_switch_off">Switch Off</string>
    <string name="form_radio1_on">Radio 1 On</string>
    <string name="form_radio1_off">Radio 1 Off</string>
    <string name="form_radio2_on">Radio 2 On</string>
    <string name="form_radio2_off">Radio 2 Off</string>
    <string name="dropdown_prompt">Dropdown Menu</string>
    <string-array name="dropdown_items">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
    <string name="form_checkbox_checked">Checked</string>
    <string name="form_checkbox_not_checked">Not Checked</string>
    <string name="animate_button_forward">Animate</string>
    <string name="animate_button_reset">Reset Animation</string>
    <string name="animate_shared_transition_button">Shared Element Transition</string>
    <string name="animate_shared_transition_text">Shared Element Transition Text</string>
    <string name="go_back">Go Back</string>
    <string name="animation_color">Color</string>
    <string name="animation_colorTextSize_together">Color/Text Together</string>
    <string name="animation_colorTextSize_sequence">Color/Text Sequential</string>
    <string name="animation_colorTextSize_delay">Color/Text Delayed</string>
    <string name="coroutine_error">Coroutine Failed!</string>
    <string name="coroutine_idle">Start Coroutine</string>
    <string name="coroutine_idle_error">Start Coroutine Error</string>
    <string name="channel_idle_error">Start Channel Error</string>
    <string name="coroutine_done">Done!</string>
    <string name="channel_error">Channel Failed!</string>
    <string name="channel_idle">Start Channel</string>
    <string name="nav_with_arg">Navigate with args</string>
</resources>
