<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/one"
        android:icon="@drawable/ic_add_24px"
        android:iconTint="@android:color/white"
        app:iconTint="@android:color/white"
        android:title="@string/one"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/two"
        android:title="@string/two"
        android:iconTint="@android:color/white"
        app:iconTint="@android:color/white"
        android:icon="@drawable/ic_add_24px"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/three"
        android:title="@string/three"
        android:iconTint="@android:color/white"
        app:iconTint="@android:color/white"
        android:icon="@drawable/ic_add_24px"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/four"
        android:title="@string/four"
        android:iconTint="@android:color/white"
        app:iconTint="@android:color/white"
        android:icon="@drawable/ic_add_24px"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/five"
        android:title="@string/five"
        android:iconTint="@android:color/white"
        app:iconTint="@android:color/white"
        android:icon="@drawable/ic_add_24px"
        app:showAsAction="ifRoom"/>
</menu>